Changed image , fixed text block in details on tablet and mobile, added hover state for contc links

--- a/src/styles/blocks/contact-us.scss
+++ b/src/styles/blocks/contact-us.scss
@@ -15,6 +15,11 @@
     font-size: 16px;
     color: inherit;
     text-decoration: none;
+    transition: color $anim-speed;
+
+    &:hover {
+      color: #bac498e5;
+    }
   }
 
   &__field {
